Closed Bug 316176 Opened 20 years ago Closed 20 years ago

crash [@ nsWindowSH::GetProperty 3336da4c] when sending mail

Categories

(Toolkit :: Startup and Profile System, defect, P1)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: wsmwk, Assigned: benjamin)

References

()

Details

(Keywords: topcrash)

Crash Data

Attachments

(1 file)

crashed during send after clicking send version 1.6a1 (20051108) TB11749054 Incident ID: 11749054 Stack Signature nsWindowSH::GetProperty 3336da4c Product ID ThunderbirdTrunk Build ID 2005110810 Trigger Time 2005-11-12 03:36:05.0 Platform Win32 Operating System Windows NT 5.1 build 2600 Module thunderbird.exe + (00128276) URL visited User Comments sending mail s/vseerror Since Last Crash 166327 sec Total Uptime 168645 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081 Stack Trace nsWindowSH::GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081] XPC_WN_Helper_GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 946] js_Interpret [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 3616] js_Invoke [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1197] nsXPCWrappedJSClass::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjsclass.cpp, line 1369] nsXPCWrappedJS::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjs.cpp, line 462] SharedStub [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp, line 147] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] nsIOService::SetOffline [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 549] nsIOService::Observe [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 707] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] NS_ShutdownXPCOM_P [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/build/nsXPComInit.cpp, line 795] ScopedXPCOMStartup::~ScopedXPCOMStartup [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/toolkit/xre/nsAppRunner.cpp, line 554] main [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mail/app/nsMailApp.cpp, line 62] kernel32.dll + 0x16d4f (0x7c816d4f)
linky 2.7.1 extension running for over a month and no problems associated with it so far, and was not used during the failed session. If memory is correct I had successfully sent one message. The second message I sent caused the crash.
Assignee: mscott → general
Severity: normal → critical
Component: General → DOM
Product: Thunderbird → Core
QA Contact: general → ian
Summary: nsWindowSH::GetProperty 3336da4c crash sending mail → crash [@ nsWindowSH::GetProperty 3336da4c] when sending mail
newer build, still crashes TB11848302 Stack Signature nsWindowSH::GetProperty 3336da4c Product ID ThunderbirdTrunk Build ID 2005111108 Trigger Time 2005-11-13 06:35:02.0 Platform Win32 Operating System Windows NT 5.1 build 2600 Module thunderbird.exe + (00127b88) URL visited User Comments hit send. message in question was labeled with return receipt and high priority s/vseerror Since Last Crash 89557 sec Total Uptime 89557 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081 Stack Trace nsWindowSH::GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081] XPC_WN_Helper_GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 946] js_Interpret [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 3616] js_Invoke [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1197] nsXPCWrappedJSClass::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjsclass.cpp, line 1372] nsXPCWrappedJS::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjs.cpp, line 462] SharedStub [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp, line 147] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] nsIOService::SetOffline [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 549] nsIOService::Observe [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 707] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] NS_ShutdownXPCOM_P [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/build/nsXPComInit.cpp, line 802] ScopedXPCOMStartup::~ScopedXPCOMStartup [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/toolkit/xre/nsAppRunner.cpp, line 554] main [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mail/app/nsMailApp.cpp, line 62] kernel32.dll + 0x16d4f (0x7c816
you definitely have a js component (quite possibly linky) that's living way too long, please find the author and have him(her) listen for xpcom-shutdown
(In reply to comment #3) > you definitely have a js component (quite possibly linky) that's living way too > long, please find the author and have him(her) listen for xpcom-shutdown > what should Linky do in xpcom-shutdown? I'm not sure I understand. Linky doesn't do any fancy stuff. It only do stuff when the user rightclicks.
well, /some/ js component listens to observernotifications for some offline event, probably one of: "network:offline-about-to-go-offline" "network:offline-status-changed" i suppose it could be that something manages to cause the browser window to stay alive until shutdown....
(In reply to comment #5) > well, /some/ js component listens to observernotifications for some offline > event, probably one of: > "network:offline-about-to-go-offline" > "network:offline-status-changed" > > i suppose it could be that something manages to cause the browser window to > stay alive until shutdown.... > linky doesn't listen to any observers so Linkt is innocent...:)
(In reply to comment #6) > (In reply to comment #5) > > well, /some/ js component listens to observernotifications for some offline > > event, probably one of: > > "network:offline-about-to-go-offline" > > "network:offline-status-changed" > > > > i suppose it could be that something manages to cause the browser window to > > stay alive until shutdown.... > > > > linky doesn't listen to any observers so Linkt is innocent...:) I was hoping to hear that - but I wanted to be up front about it being installed. what's the next step?
here's two more TB logs - different machines, different builds: XP/20051111, w2k/20051113 server issue? Incident ID: 12093339 Stack Signature nsWindowSH::GetProperty 3336da4c Product ID ThunderbirdTrunk Build ID 2005111108 Trigger Time 2005-11-21 04:33:10.0 Platform Win32 Operating System Windows NT 5.1 build 2600 Module thunderbird.exe + (00127b88) URL visited User Comments sent a message bcc only then sent a second message withi no bcc crash s/vseerror Since Last Crash 295191 sec Total Uptime 609888 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081 Stack Trace nsWindowSH::GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081] XPC_WN_Helper_GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 946] js_Interpret [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 3616] js_Invoke [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1197] nsXPCWrappedJSClass::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjsclass.cpp, line 1372] nsXPCWrappedJS::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjs.cpp, line 462] SharedStub [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp, line 147] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] nsIOService::SetOffline [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 549] nsIOService::Observe [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 707] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] NS_ShutdownXPCOM_P [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/build/nsXPComInit.cpp, line 802] ScopedXPCOMStartup::~ScopedXPCOMStartup [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/toolkit/xre/nsAppRunner.cpp, line 554] main [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mail/app/nsMailApp.cpp, line 62] kernel32.dll + 0x16d4f (0x7c816d4f) Incident ID: 11914926 Stack Signature nsWindowSH::GetProperty bbf1592e Product ID ThunderbirdTrunk Build ID 2005111308 Trigger Time 2005-11-15 15:26:26.0 Platform Win32 Operating System Windows NT 5.0 build 2195 Module thunderbird.exe + (00127a25) URL visited User Comments sent messages. closed an unsent message. s/vseerror Since Last Crash 91939 sec Total Uptime 109908 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081 Stack Trace nsWindowSH::GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4081] XPC_WN_Helper_GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 946] js_Interpret [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 3616] js_Invoke [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1197] nsXPCWrappedJSClass::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjsclass.cpp, line 1372] nsXPCWrappedJS::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjs.cpp, line 462] SharedStub [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp, line 147] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] nsIOService::SetOffline [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 549] nsIOService::Observe [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 707] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 235] NS_ShutdownXPCOM_P [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/build/nsXPComInit.cpp, line 802] ScopedXPCOMStartup::~ScopedXPCOMStartup [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/toolkit/xre/nsAppRunner.cpp, line 554] main [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mail/app/nsMailApp.cpp, line 62] KERNEL32.dll + 0x28989 (0x7c598989)
Status: UNCONFIRMED → NEW
Ever confirmed: true
I'm getting freezes on *every* send, save-as-draft, and auto-save. No trackback though. Thunderbird version 1.6a1 (20051128), WinXP I'll test again with all my extensions disabled...
Nope. Neither disabling extensions nor the "-safe-mode" parameter prevented the freezes. You might want to add "Auto Save"(1) to the summary, as this also causes the freezes (annoying when composing long e-mails). (1) Tools / Options / Composition / General / Auto Save every [5] minutes
(In reply to comment #10) > You might want to add "Auto Save"(1) to the summary, as this also causes the > freezes (annoying when composing long e-mails). > > (1) Tools / Options / Composition / General / Auto Save every [5] minutes Peter, what makes you think our two issues have the same cause? I don't see a connection: a) I crash and you hang, b) I see no symptom that directly ties your issue to mine.
I refined my bugzilla search and think "my" bug is bug 317970. Sorry!
This is the number one Thunderbird crasher on the trunk. It showed up sometime in November. I don't have any extensions, this crash is not dependent on having extensions. I started seeing this crash in the last few weeks too. It looks like after sending a message I sometimes see xpcom shutting down and then it starts broadcasting a notification to necko about us going offline which leads to the crash. Benjamin, could this be related to some of the xpcom startup / shut down changes that you were working on around this month? I thought at least one part of that got backed out though. I'm at a loss as to why ScopedXPCOMStartup::~ScopedXPCOMStartup is suddenly getting called sometimes after the mail compose window closes. Unless someone is losing track of the number of open windows and ends up thinking we don't have any more open windows?
Flags: blocking1.9a1?
Keywords: crashtopcrash
I bet you're onto something re the number of open windows count getting confused. I bet this has to do with the recycled compose window, and counts getting confused. I think the app is actually trying to shut down when the compose window gets closed, even though the 3-pane is open.
Steps to reproduce: 1) Open up thunderbird 3 pane 2) Bring up a compose window 3) Click on the red X to close the compose window 4) Note that the entire app starts to shut down and then crashes instead of returning you to the 3-pane.
Let me get a build together sometime this week and breakpoint some important bits; this could be the cached compose window or it could be a double window.close() call (I own a bug on the double window.close() doing bad stuff).
Assignee: general → benjamin
Component: DOM → XRE Startup
Product: Core → Toolkit
Target Milestone: --- → mozilla1.9alpha1
Priority: -- → P1
bsmed, any news? All was calm for a few weeks. Then, forgetting I had this bug, I started having problems again and filed a new Bug 322598 - it has similarities but is slightly different, and TB so far has no symbol information. No linky installed here.
(symbols for trunk have returned on talkback!) same I think as previously reported but different line number Incident ID: 13966965 Stack Signature nsWindowSH::GetProperty bbf1592e Product ID ThunderbirdTrunk Build ID 2006011406 Trigger Time 2006-01-14 17:51:07.0 Platform Win32 Operating System Windows NT 5.0 build 2195 Module thunderbird.exe + (001276c0) URL visited User Comments sent a message (let's see if we get symbols for TB20060114) s/vseerror Since Last Crash 4303 sec Total Uptime 4303 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4163 Stack Trace nsWindowSH::GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 4163] XPC_WN_Helper_GetProperty [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 946] js_Interpret [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 3873] js_Invoke [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1254] nsXPCWrappedJSClass::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjsclass.cpp, line 1376] nsXPCWrappedJS::CallMethod [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappedjs.cpp, line 466] SharedStub [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp, line 147] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 241] nsIOService::SetOffline [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 549] nsIOService::Observe [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsIOService.cpp, line 707] nsObserverService::NotifyObservers [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/ds/nsObserverService.cpp, line 241] NS_ShutdownXPCOM_P [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/build/nsXPComInit.cpp, line 744] ScopedXPCOMStartup::~ScopedXPCOMStartup [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/toolkit/xre/nsAppRunner.cpp, line 556] main [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mail/app/nsMailApp.cpp, line 62] KERNEL32.dll + 0x28989 (0x7c598989)
*** Bug 322598 has been marked as a duplicate of this bug. ***
> Benjamin, could this be related to some of the xpcom startup / shut down > changes that you were working on around this month? > I'm at a loss as to why ScopedXPCOMStartup::~ScopedXPCOMStartup is suddenly > getting called sometimes after the mail compose window closes. Unless someone > is losing track of the number of open windows and ends up thinking we don't > have any more open windows? This bug makes it quite impossible to use trunk for any length of time even in a test environment. It is most definitely a blocker.
(In reply to comment #14) > I bet you're [Scott] onto something re the number of open windows count getting > confused. I bet this has to do with the recycled compose window, and counts > getting confused. I think the app is actually trying to shut down when the > compose window gets closed, even though the 3-pane is open. I discovered if "software update ... A new version of Thunderbird is available: 1.6a" window is open then the crash doesn't happen immediately upon closing of the compose window - it is delayed until the software update window closes.
all nsWindowSH::GetProperty crashes on talkback are trunk, with few exceptions. The exceptions are: TB13946687 Thunderbird10LinuxIntel 2005092314 TB13848679 Thunderbird10Win32 2005092314 TB13632289 Thunderbird15Win32 2005120115
(In reply to bsmed comment #16) > ... could be a double > window.close() call (I own a bug on the double window.close() doing bad stuff). bug 314800? Does this bug depend on that? > Let me get a build together sometime this week and breakpoint some important > bits; this could be the cached compose window I didn't find a bug # for this.
Attachment #210509 - Flags: first-review? → first-review?(bienvenu)
Attachment #210509 - Flags: first-review?(bienvenu) → first-review+
Fixed on trunk, which is the only place this needs fixing... this is a regression from 312135.
Blocks: 312135
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
reporter confirms WFM Thanks bsmedberg
Flags: blocking1.9a1?
Component: XRE Startup → Startup and Profile System
QA Contact: ian → startup
Crash Signature: [@ nsWindowSH::GetProperty 3336da4c]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: