Bug 316176 - unexpected early shutdown leads to crash when closing mail compose window, r=bienvenu